# binpacking

./: .gitignore  .travis.yml  CLAUDE.md  Makefile  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py
.eggs/: pytest_runner-2.9-py2.7.egg
binpacking/: __init__.py  binpacking_binary.py  load_csv.py  numpy.py  to_constant_bin_number.py  to_constant_volume.py  utilities.py
binpacking/tests/: conftest.py  constant_bin_number.py  constant_volume.py  test_cli.py  test_constant_bin_number.py  test_constant_volume.py  test_csv_operations.py  test_numpy.py  test_utilities.py
examples/: hamlet_word_count.csv  hamlet_word_count_00.csv  hamlet_word_count_01.csv  hamlet_word_count_02.csv  hamlet_word_count_03.csv  hamlet_word_count_04.csv  hamlet_word_count_05.csv  hamlet_word_count_06.csv  hamlet_word_count_07.csv  hamlet_word_count_08.csv  hamlet_word_count_09.csv  hamlet_word_count_10.csv  header_0.csv  header_1.csv  header_2.csv  headerless.csv  headerless_0.csv  headerless_2.csv
examples_and_resources/: hamlet_word_count_01.csv  hamlet_word_count_02.csv  hamlet_word_count_03.csv  hamlet_word_count_04.csv  hamlet_word_count_07.csv  hamlet_word_count_08.csv  hamlet_word_count_09.csv  header.csv  headerless_1.csv
examples_and_resources/efficiency_analyses/: README.md  benchmark_algorithms.py  size_analysis.py  sorting_analysis.py  visualize_results.py
