[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binpacking"
version = "2.0.0"
description = "Heuristic distribution of weighted items to bins (either a fixed number of bins or a fixed number of volume per bin). Data may be in form of list, dictionary, list of tuples or csv-file."
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Benjamin F. Maier", email = "bfmaier@physik.hu-berlin.de"}
]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.20"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
binpacking = "binpacking.binpacking_binary:main"

[project.urls]
Homepage = "https://www.github.com/benmaier/binpacking"
Repository = "https://www.github.com/benmaier/binpacking"

[tool.setuptools.packages.find]
include = ["binpacking*"]

[tool.pytest.ini_options]
testpaths = ["binpacking/tests"]
python_files = ["test_*.py"]
python_classes = ["Test"]
addopts = "--cov=binpacking/"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E221", "E226", "E241", "E242"]
